fix logo/title align issue
give the logo and its accompanying text float values to fix their alignment in relation to one another

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ header{
 }
 .logo{
   width: 50px;
+  float: left;
 }
 #work{
   margin-top: 30px;
@@ -222,7 +223,7 @@ footer .container{
 }
 .top-left-corner{
   color: #F4FFFD;
-  text-align: left;
+  float: left;
   display: inline-block;
   margin: 10px;
 }
